@@ -1034,7 +1034,7 @@ cobc_strdup (const char *dupstr)
 	return p;
 }
 
-#ifdef	_MSC_VER
+#if	defined (_WIN32) || defined (__CYGWIN__)
 static char *
 cobc_stradd_dup (const char *str1, const char *str2)
 {
@@ -2667,7 +2667,9 @@ cobc_deciph_funcs (const char *opt)
 	cobc_free (p);
 }
 
-#if	defined (_MSC_VER) || defined(__OS400__) || defined(__WATCOMC__) || defined(__BORLANDC__)
+#if	defined (_WIN32)      || defined (__CYGWIN__) \
+ || defined (__WATCOMC__) || defined (__BORLANDC__) \
+ || defined (__OS400__)
 static void
 file_stripext (char *buff)
 {
@@ -3385,7 +3387,7 @@ process_command_line (const int argc, char **argv)
 			break;
 
 		case 'e':
-			/* -e <xx> : Add an extension suffix */
+			/* -ext <xx> : Add an extension suffix */
 			if (strlen (cob_optarg) > 15U) {
 				cobc_err_exit (COBC_INV_PAR, "--ext");
 			}
@@ -7702,7 +7704,9 @@ process_module_direct (struct filename *fn)
 	if (output_name) {
 		name = output_name_buff;
 		strcpy (name, output_name);
-#if	defined(_MSC_VER) || defined(__OS400__) || defined(__WATCOMC__) || defined(__BORLANDC__)
+#if	defined (_MSC_VER) \
+ || defined (__WATCOMC__) || defined (__BORLANDC__) \
+ || defined (__OS400__)
 		file_stripext (name);
 #else
 		if (strchr (output_name, '.') == NULL) {
@@ -7711,7 +7715,9 @@ process_module_direct (struct filename *fn)
 #endif
 	} else {
 		name = file_basename (fn->source, NULL);
-#if	!defined(_MSC_VER) && !defined(__OS400__) && !defined(__WATCOMC__) && !defined(__BORLANDC__)
+#if	!defined (_MSC_VER) \
+ && !defined (__WATCOMC__) && !defined (__BORLANDC__) \
+ && !defined (__OS400__)
 		strcat (name, "." COB_MODULE_EXT);
 #endif
 	}
@@ -7816,7 +7822,9 @@ process_module (struct filename *fn)
 	if (output_name) {
 		name = output_name_buff;
 		strcpy (name, output_name);
-#if	defined(_MSC_VER) || defined(__OS400__) || defined(__WATCOMC__) || defined(__BORLANDC__)
+#if	defined (_MSC_VER) \
+ || defined (__WATCOMC__) || defined (__BORLANDC__) \
+ || defined (__OS400__)
 		file_stripext (name);
 #else
 		if (strchr (output_name, '.') == NULL) {
@@ -7825,7 +7833,9 @@ process_module (struct filename *fn)
 #endif
 	} else {
 		name = file_basename (fn->source, NULL);
-#if	!defined(_MSC_VER) && !defined(__OS400__) && !defined(__WATCOMC__) &&! defined(__BORLANDC__)
+#if	!defined (_MSC_VER) \
+ && !defined (__WATCOMC__) && !defined (__BORLANDC__) \
+ && !defined (__OS400__)
 		strcat (name, "." COB_MODULE_EXT);
 #endif
 	}
@@ -7926,7 +7936,9 @@ process_library (struct filename *l)
 	if (output_name) {
 		name = output_name_buff;
 		strcpy (name, output_name);
-#if	defined(_MSC_VER) || defined(__OS400__) || defined(__WATCOMC__) || defined(__BORLANDC__)
+#if	defined (_MSC_VER) \
+ || defined (__WATCOMC__) || defined (__BORLANDC__) \
+ || defined (__OS400__)
 		file_stripext (name);
 #else
 		if (strchr (output_name, '.') == NULL) {
@@ -7935,7 +7947,9 @@ process_library (struct filename *l)
 #endif
 	} else {
 		name = file_basename (l->source, NULL);
-#if	!defined(_MSC_VER) && !defined(__OS400__) && !defined(__WATCOMC__) && !defined(__BORLANDC__)
+#if	!defined (_MSC_VER) \
+ && !defined (__WATCOMC__) && !defined (__BORLANDC__) \
+ && !defined (__OS400__)
 		strcat (name, "." COB_MODULE_EXT);
 #endif
 	}
@@ -8016,7 +8030,7 @@ process_link (struct filename *l)
 {
 	struct filename	*f;
 	const char		*name;
-#if defined(_MSC_VER) || defined (COB_STRIP_CMD)
+#if defined(_WIN32) || defined(__CYGWIN__) || defined (COB_STRIP_CMD)
 	const char		*exe_name;
 #endif
 	size_t		bufflen;
@@ -8044,7 +8058,9 @@ process_link (struct filename *l)
 	}
 
 	if (output_name) {
-#if	defined(_MSC_VER) || defined(__OS400__) || defined(__WATCOMC__) || defined(__BORLANDC__)
+#if	defined (_WIN32)      || defined (__CYGWIN__) \
+ || defined (__WATCOMC__) || defined (__BORLANDC__) \
+ || defined (__OS400__)
 		name = cobc_main_strdup (output_name);
 		file_stripext ((char *)name);
 #else
@@ -8057,8 +8073,11 @@ process_link (struct filename *l)
 			name = file_basename (l->source, NULL);
 		}
 	}
-#ifdef	_MSC_VER
+#if	defined (_WIN32) || defined (__CYGWIN__)
 	exe_name = cobc_stradd_dup (name, COB_EXE_EXT);
+#ifndef _MSC_VER
+	name = exe_name;
+#endif
 #endif
 
 	size = strlen (name);
