@@ -171,7 +171,8 @@ AT_CHECK([$COBC -I sub/copy -x prog.cob -o prog.c], [0], [], [])
 AT_CHECK([$COBC -I sub/copy -x prog.c -o prog.$COB_OBJECT_EXT], [0], [], [])
 AT_CHECK([$COBC -I sub/copy -x prog.$COB_OBJECT_EXT -o progo$COB_EXE_EXT], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./progo], [0], [bluBb], [])
-AT_CHECK([$COBC -I sub/copy prog.cob -o prog.i], [0], [], [])
+# making the extension explicit here to not let case-insensitive file-systems catch a .CPY...
+AT_CHECK([$COBC -I sub/copy prog.cob -ext=cpy -o prog.i], [0], [], [])
 AT_CHECK([$COBC -x prog.i -o prog$COB_EXE_EXT], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [bluBb], [])
 AT_CHECK([$COBC -x prog.i -fgen-c-line-directives -fgen-c-labels -save-temps], [0], [], [])
